host/iptables/rules.v4
# Generated by iptables-save v1.8.10 (nf_tables) on Sun Aug 16 18:28:03 2026
*mangle
:PREROUTING ACCEPT [4528618:11108345035]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [2001944:2826950712]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -m conntrack --ctstate RELATED,ESTABLISHED -m connmark ! --mark 0x0/0xff0000 -j CONNMARK --restore-mark --nfmask 0xff0000 --ctmask 0xff0000
-A OUTPUT -m conntrack --ctstate NEW -m mark ! --mark 0x0/0xff0000 -j CONNMARK --save-mark --nfmask 0xff0000 --ctmask 0xff0000
COMMIT
# Completed on Sun Aug 16 18:28:03 2026
# Generated by iptables-save v1.8.10 (nf_tables) on Sun Aug 16 18:28:03 2026
*raw
:PREROUTING ACCEPT [3801233:9551492797]
:OUTPUT ACCEPT [0:0]
-A PREROUTING -d 172.18.0.5/32 ! -i br-fb24246de8eb -j DROP
-A PREROUTING -d 172.18.0.6/32 ! -i br-fb24246de8eb -j DROP
-A PREROUTING -d 172.18.0.8/32 ! -i br-fb24246de8eb -j DROP
-A PREROUTING -d 172.18.0.3/32 ! -i br-fb24246de8eb -j DROP
-A PREROUTING -d 172.18.0.2/32 ! -i br-fb24246de8eb -j DROP
-A PREROUTING -d 172.18.0.4/32 ! -i br-fb24246de8eb -j DROP
-A PREROUTING -d 172.20.0.5/32 ! -i br-8f21b76972df -j DROP
-A PREROUTING -d 172.20.0.6/32 ! -i br-8f21b76972df -j DROP
-A PREROUTING -d 172.20.0.3/32 ! -i br-8f21b76972df -j DROP
-A PREROUTING -d 172.20.0.8/32 ! -i br-8f21b76972df -j DROP
-A PREROUTING -d 172.20.0.4/32 ! -i br-8f21b76972df -j DROP
-A PREROUTING -d 172.20.0.7/32 ! -i br-8f21b76972df -j DROP
-A PREROUTING -d 172.20.0.9/32 ! -i br-8f21b76972df -j DROP
-A PREROUTING -d 172.18.0.7/32 ! -i br-fb24246de8eb -j DROP
-A PREROUTING -d 172.20.0.2/32 ! -i br-8f21b76972df -j DROP
-A PREROUTING -d 172.18.0.9/32 ! -i br-fb24246de8eb -j DROP
COMMIT
# Completed on Sun Aug 16 18:28:03 2026
# Generated by iptables-save v1.8.10 (nf_tables) on Sun Aug 16 18:28:03 2026
*filter
:INPUT ACCEPT [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [2079294:2834876546]
:DOCKER - [0:0]
:DOCKER-BRIDGE - [0:0]
:DOCKER-CT - [0:0]
:DOCKER-FORWARD - [0:0]
:DOCKER-INTERNAL - [0:0]
:DOCKER-USER - [0:0]
:InstanceServices - [0:0]
:ts-forward - [0:0]
:ts-input - [0:0]
-A INPUT -j ts-input
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -s 172.19.0.0/24 -d 172.19.0.1/32 -p tcp -m tcp --dport 9100 -m comment --comment "prometheus->node_exporter" -j ACCEPT
-A INPUT -s 172.20.0.0/16 -d 172.20.0.1/32 -p tcp -m tcp --dport 3389 -m comment --comment "kasm-workspace->host-xrdp" -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-FORWARD
-A FORWARD -o br_kasm_sidecar -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br_kasm_sidecar -j DOCKER
-A FORWARD -i br_kasm_sidecar ! -o br_kasm_sidecar -j ACCEPT
-A FORWARD -i br_kasm_sidecar -o br_kasm_sidecar -j ACCEPT
-A FORWARD -j ts-forward
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
-A OUTPUT -d 169.254.0.0/16 -j InstanceServices
-A DOCKER -d 172.18.0.2/32 ! -i br-fb24246de8eb -o br-fb24246de8eb -p tcp -m tcp --dport 443 -j ACCEPT
-A DOCKER -d 172.18.0.2/32 ! -i br-fb24246de8eb -o br-fb24246de8eb -p tcp -m tcp --dport 80 -j ACCEPT
-A DOCKER ! -i br-8f21b76972df -o br-8f21b76972df -j DROP
-A DOCKER ! -i docker0 -o docker0 -j DROP
-A DOCKER ! -i br-fb24246de8eb -o br-fb24246de8eb -j DROP
-A DOCKER-BRIDGE -o br-8f21b76972df -j DOCKER
-A DOCKER-BRIDGE -o docker0 -j DOCKER
-A DOCKER-BRIDGE -o br-fb24246de8eb -j DOCKER
-A DOCKER-CT -o br-8f21b76972df -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o br-fb24246de8eb -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-FORWARD -j DOCKER-CT
-A DOCKER-FORWARD -j DOCKER-INTERNAL
-A DOCKER-FORWARD -j DOCKER-BRIDGE
-A DOCKER-FORWARD -i br-8f21b76972df -j ACCEPT
-A DOCKER-FORWARD -i docker0 -j ACCEPT
-A DOCKER-FORWARD -i br-fb24246de8eb -j ACCEPT
-A DOCKER-FORWARD -i br-069390cf42c3 -o br-069390cf42c3 -j ACCEPT
-A DOCKER-INTERNAL ! -s 172.19.0.0/24 -o br-069390cf42c3 -j DROP
-A DOCKER-INTERNAL ! -d 172.19.0.0/24 -i br-069390cf42c3 -j DROP
-A DOCKER-USER -m conntrack --ctstate RELATED,ESTABLISHED -j RETURN
-A DOCKER-USER -s 172.16.0.0/12 -j RETURN
-A DOCKER-USER -s 192.168.0.0/16 -j RETURN
-A DOCKER-USER -s 10.0.0.0/8 -j RETURN
-A DOCKER-USER -s 100.64.0.0/10 -j RETURN
-A DOCKER-USER -s 127.0.0.0/8 -j RETURN
-A DOCKER-USER -s 103.21.244.0/22 -p tcp -m multiport --dports 80,443 -j RETURN
-A DOCKER-USER -s 103.22.200.0/22 -p tcp -m multiport --dports 80,443 -j RETURN
-A DOCKER-USER -s 103.31.4.0/22 -p tcp -m multiport --dports 80,443 -j RETURN
-A DOCKER-USER -s 104.16.0.0/13 -p tcp -m multiport --dports 80,443 -j RETURN
-A DOCKER-USER -s 104.24.0.0/14 -p tcp -m multiport --dports 80,443 -j RETURN
-A DOCKER-USER -s 108.162.192.0/18 -p tcp -m multiport --dports 80,443 -j RETURN
-A DOCKER-USER -s 131.0.72.0/22 -p tcp -m multiport --dports 80,443 -j RETURN
-A DOCKER-USER -s 141.101.64.0/18 -p tcp -m multiport --dports 80,443 -j RETURN
-A DOCKER-USER -s 162.158.0.0/15 -p tcp -m multiport --dports 80,443 -j RETURN
-A DOCKER-USER -s 172.64.0.0/13 -p tcp -m multiport --dports 80,443 -j RETURN
-A DOCKER-USER -s 173.245.48.0/20 -p tcp -m multiport --dports 80,443 -j RETURN
-A DOCKER-USER -s 188.114.96.0/20 -p tcp -m multiport --dports 80,443 -j RETURN
-A DOCKER-USER -s 190.93.240.0/20 -p tcp -m multiport --dports 80,443 -j RETURN
-A DOCKER-USER -s 197.234.240.0/22 -p tcp -m multiport --dports 80,443 -j RETURN
-A DOCKER-USER -s 198.41.128.0/17 -p tcp -m multiport --dports 80,443 -j RETURN
-A DOCKER-USER -p tcp -m multiport --dports 80,443 -m comment --comment "non-Cloudflare -> web ports" -j DROP
-A DOCKER-USER -j RETURN
-A InstanceServices -d 169.254.0.2/32 -p tcp -m owner --uid-owner 0 -m tcp --dport 3260 -m comment --comment "See the Oracle-Provided Images section in the Oracle Cloud Infrastructure documentation for security impact of modifying or removing this rule" -j ACCEPT
-A InstanceServices -d 169.254.2.0/24 -p tcp -m owner --uid-owner 0 -m tcp --dport 3260 -m comment --comment "See the Oracle-Provided Images section in the Oracle Cloud Infrastructure documentation for security impact of modifying or removing this rule" -j ACCEPT
-A InstanceServices -d 169.254.4.0/24 -p tcp -m owner --uid-owner 0 -m tcp --dport 3260 -m comment --comment "See the Oracle-Provided Images section in the Oracle Cloud Infrastructure documentation for security impact of modifying or removing this rule" -j ACCEPT
-A InstanceServices -d 169.254.5.0/24 -p tcp -m owner --uid-owner 0 -m tcp --dport 3260 -m comment --comment "See the Oracle-Provided Images section in the Oracle Cloud Infrastructure documentation for security impact of modifying or removing this rule" -j ACCEPT
-A InstanceServices -d 169.254.0.2/32 -p tcp -m tcp --dport 80 -m comment --comment "See the Oracle-Provided Images section in the Oracle Cloud Infrastructure documentation for security impact of modifying or removing this rule" -j ACCEPT
-A InstanceServices -d 169.254.169.254/32 -p udp -m udp --dport 53 -m comment --comment "See the Oracle-Provided Images section in the Oracle Cloud Infrastructure documentation for security impact of modifying or removing this rule" -j ACCEPT
-A InstanceServices -d 169.254.169.254/32 -p tcp -m tcp --dport 53 -m comment --comment "See the Oracle-Provided Images section in the Oracle Cloud Infrastructure documentation for security impact of modifying or removing this rule" -j ACCEPT
-A InstanceServices -d 169.254.0.3/32 -p tcp -m owner --uid-owner 0 -m tcp --dport 80 -m comment --comment "See the Oracle-Provided Images section in the Oracle Cloud Infrastructure documentation for security impact of modifying or removing this rule" -j ACCEPT
-A InstanceServices -d 169.254.0.4/32 -p tcp -m tcp --dport 80 -m comment --comment "See the Oracle-Provided Images section in the Oracle Cloud Infrastructure documentation for security impact of modifying or removing this rule" -j ACCEPT
-A InstanceServices -d 169.254.169.254/32 -p tcp -m tcp --dport 80 -m comment --comment "See the Oracle-Provided Images section in the Oracle Cloud Infrastructure documentation for security impact of modifying or removing this rule" -j ACCEPT
-A InstanceServices -d 169.254.169.254/32 -p udp -m udp --dport 67 -m comment --comment "See the Oracle-Provided Images section in the Oracle Cloud Infrastructure documentation for security impact of modifying or removing this rule" -j ACCEPT
-A InstanceServices -d 169.254.169.254/32 -p udp -m udp --dport 69 -m comment --comment "See the Oracle-Provided Images section in the Oracle Cloud Infrastructure documentation for security impact of modifying or removing this rule" -j ACCEPT
-A InstanceServices -d 169.254.169.254/32 -p udp -m udp --dport 123 -m comment --comment "See the Oracle-Provided Images section in the Oracle Cloud Infrastructure documentation for security impact of modifying or removing this rule" -j ACCEPT
-A InstanceServices -d 169.254.0.0/16 -p tcp -m tcp -m comment --comment "See the Oracle-Provided Images section in the Oracle Cloud Infrastructure documentation for security impact of modifying or removing this rule" -j REJECT --reject-with tcp-reset
-A InstanceServices -d 169.254.0.0/16 -p udp -m udp -m comment --comment "See the Oracle-Provided Images section in the Oracle Cloud Infrastructure documentation for security impact of modifying or removing this rule" -j REJECT --reject-with icmp-port-unreachable
-A ts-forward -i tailscale0 -j MARK --set-xmark 0x40000/0xff0000
-A ts-forward -m mark --mark 0x40000/0xff0000 -j ACCEPT
-A ts-forward -s 100.64.0.0/10 -o tailscale0 -j DROP
-A ts-forward -o tailscale0 -j ACCEPT
-A ts-input -s 100.64.0.10/32 -i lo -j ACCEPT
-A ts-input -i tailscale0 -j ACCEPT
-A ts-input -p udp -m udp --dport 41641 -j ACCEPT
-A ts-input -s 100.115.92.0/23 ! -i tailscale0 -j RETURN
-A ts-input -s 100.64.0.0/10 ! -i tailscale0 -j DROP
COMMIT
# Completed on Sun Aug 16 18:28:03 2026
# Generated by iptables-save v1.8.10 (nf_tables) on Sun Aug 16 18:28:03 2026
*nat
:PREROUTING ACCEPT [27099:1621762]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [67304:5616483]
:POSTROUTING ACCEPT [90451:6759744]
:DOCKER - [0:0]
:ts-postrouting - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -o docker0 -m addrtype --src-type LOCAL -j MASQUERADE
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -o br-8f21b76972df -m addrtype --src-type LOCAL -j MASQUERADE
-A POSTROUTING -s 172.20.0.0/16 ! -o br-8f21b76972df -j MASQUERADE
-A POSTROUTING -o br-fb24246de8eb -m addrtype --src-type LOCAL -j MASQUERADE
-A POSTROUTING -s 172.18.0.0/16 ! -o br-fb24246de8eb -j MASQUERADE
-A POSTROUTING -j ts-postrouting
-A POSTROUTING -s 172.21.0.0/16 ! -o br_kasm_sidecar -j MASQUERADE
-A POSTROUTING -s 172.18.0.2/32 -d 172.18.0.2/32 -p tcp -m tcp --dport 80 -j MASQUERADE
-A POSTROUTING -s 172.18.0.2/32 -d 172.18.0.2/32 -p tcp -m tcp --dport 443 -j MASQUERADE
-A DOCKER -p tcp -m tcp --dport 80 -j DNAT --to-destination 172.18.0.2:80
-A DOCKER -p tcp -m tcp --dport 443 -j DNAT --to-destination 172.18.0.2:443
-A ts-postrouting -m mark --mark 0x40000/0xff0000 -j MASQUERADE
COMMIT
# Completed on Sun Aug 16 18:28:03 2026
